--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>CSC - Index</title>
+  <title>CLASSIC SISTERS COUTURE - Index</title>
   <meta content="" name="description">
 
   <meta content="" name="keywords">
@@ -44,7 +44,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/1_logo.png" alt="">
-        <span>Classic Sisters Couture</span>
+        <span>CSC</span>
       </a>
 
       <nav id="navbar" class="navbar">
