--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>CLASSIC SISTERS COUTURE - Index</title>
+  <title>CLASSIC SISTERS COUTURE</title>
   <meta content="" name="description">
 
   <meta content="" name="keywords">
@@ -118,7 +118,7 @@
               <h3>Who We Are</h3>
               <h2>The business started as a grass-roots, “Making designer and traditional dresses for family and friends”.</h2>
               <p>
-                The company ultimately cares more about putting out a durable and ethical product for affordable prices– which makes it a standout amongst global garment companies.
+                The company ultimately cares more about putting out a durable and ethical product for affordable prices– which makes us unique.
               </p>
               <div class="text-center text-lg-start">
                 <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
@@ -274,7 +274,7 @@
               <div class="col-md-6" data-aos="zoom-out" data-aos-delay="500">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
-                  <h3>Traditonal wares</h3>
+                  <h3>Traditonal wear</h3>
                 </div>
               </div>
 
@@ -332,7 +332,7 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-Traditional">Traditional</li>
-              <li data-filter=".filter-Westren">Westren</li>
+              <li data-filter=".filter-western">Western</li>
               <li data-filter=".filter-Duo">Duo</li>
             </ul>
           </div>
@@ -382,26 +382,26 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Westren">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-western">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1_portfolio-4.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Westren 1</h4>
-                <p>Westren</p>
+                <h4>western 1</h4>
+                <p>western</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/1_portfolio-4.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Westren 2"><i class="bi bi-plus"></i></a>
+                  <a href="assets/img/portfolio/1_portfolio-4.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="western 2"><i class="bi bi-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Westren">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-western">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1_portfolio-5.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Westren 2</h4>
-                <p>Westren</p>
+                <h4>western 2</h4>
+                <p>western</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/1_portfolio-5.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Duo 2"><i class="bi bi-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
@@ -431,7 +431,7 @@
                 <h4>Traditional 5</h4>
                 <p>Traditional</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/1_portfolio-7.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Westren 1"><i class="bi bi-plus"></i></a>
+                  <a href="assets/img/portfolio/1_portfolio-7.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="western 1"><i class="bi bi-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
@@ -445,19 +445,19 @@
                 <h4>Duo 1</h4>
                 <p>Duo</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/1_portfolio-8.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Westren 3"><i class="bi bi-plus"></i></a>
+                  <a href="assets/img/portfolio/1_portfolio-8.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="western 3"><i class="bi bi-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Westren">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-western">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1_portfolio-9.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Westren 3</h4>
-                <p>Westren</p>
+                <h4>western 3</h4>
+                <p>western</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/1_portfolio-9.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Duo 3"><i class="bi bi-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
@@ -496,7 +496,7 @@
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/1_testimonials-1.jpg" class="testimonial-img" alt="">
                   <h3>Sravani</h3>
-                  <h4>Docter</h4>
+                  <h4>Doctor</h4>
                 </div>
               </div>
             </div><!-- End testimonial item -->
