--- a/index.html
+++ b/index.html
@@ -331,8 +331,11 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-Traditional">Traditional</li>
-              <li data-filter=".filter-western">Western</li>
+              <li data-filter=".filter-Traditional-gowns">Traditional-gowns</li>
+              <li data-filter=".filter-western-gowns">Western-gowns</li>
+              <li data-filter=".filter-Lehengas">Lehengas</li>
+              <li data-filter=".filter-Fusion-dresses">Fusion dresses</li>
+              <li data-filter=".filter-Casual-wear">Casual wear</li>
               <li data-filter=".filter-Duo">Duo</li>
             </ul>
           </div>
@@ -340,29 +343,32 @@
 
         <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Traditional">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Traditional-gowns">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1_portfolio-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Traditional 1</h4>
-                <p>Traditional</p>
+                <h1>Dress code:TG001 Price:1500 rs /-</h1>
+                <!--<h4>Traditional-gowns 1</h4>
+                <p>Traditional-gowns</p> -->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/1_portfolio-1.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Traditional 1"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-                </div>
+                 <!-- <a href="portfolio-details_1.html" title="More Details"><i class="bi bi-link"></i></a>-->
+                </div> 
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Traditional">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Traditional-gowns">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1_portfolio-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Traditional 2</h4>
-                <p>Traditional</p>
+                <h4>Dress code:TG002</h4>
+                <h4>Price:1200 rs /-</h4>
+                <!--<h4>Traditional-gowns 2</h4>
+                <p>Traditional-gowns</p>-->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/1_portfolio-2.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Duo 3"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
                 </div>
               </div>
             </div>
@@ -446,6 +452,21 @@
                 <p>Duo</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/1_portfolio-8.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="western 3"><i class="bi bi-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Fusion-dresses">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/1_portfolio-10.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Fusion dresses 1</h4>
+                <p>Fusion dresses</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/1_portfolio-9.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="western 3"><i class="bi bi-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
