--- a/index.html
+++ b/index.html
@@ -358,12 +358,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Traditional-gowns">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Traditional-gowns filter-western-gowns">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1_portfolio-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Dress code:TG002</h4>
-                <h4>Price:1200 rs /-</h4>
+                <h4>Price:1700 rs /-</h4>
                 <!--<h4>Traditional-gowns 2</h4>
                 <p>Traditional-gowns</p>-->
                 <div class="portfolio-links">
@@ -374,71 +374,81 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Traditional">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Traditional-gowns">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1_portfolio-3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Traditional 3</h4>
-                <p>Traditional</p>
+                <h4>Dress code:TG003</h4>
+                <h4>Price:1200 rs /-</h4>
+                <!--<h4>Traditional-gowns 2</h4>
+                <p>Traditional-gowns</p>-->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/1_portfolio-3.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Traditional 2"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-western">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-western-gowns">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1_portfolio-4.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>western 1</h4>
-                <p>western</p>
+                <h4>Dress code:WG001</h4>
+                <h4>Price:1800 rs /-</h4>
+                <!--<h4>Traditional-gowns 2</h4>
+                <p>Traditional-gowns</p>-->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/1_portfolio-4.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="western 2"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-western">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-western-gowns">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1_portfolio-5.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>western 2</h4>
-                <p>western</p>
+                <h4>Dress code:WG002</h4>
+                <h4>Price:1800 rs /-</h4>
+                <!--<h4>Traditional-gowns 2</h4>
+                <p>Traditional-gowns</p>-->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/1_portfolio-5.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Duo 2"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Traditional">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Lehengas">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1_portfolio-6.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Traditional 4</h4>
-                <p>Traditional</p>
+                <h4>Dress code:LG001</h4>
+                <h4>Price:1800 rs /-</h4>
+                <!--<h4>Traditional-gowns 2</h4>
+                <p>Traditional-gowns</p>-->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/1_portfolio-6.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Traditional 3"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Traditional">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Traditional-gowns">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1_portfolio-7.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Traditional 5</h4>
-                <p>Traditional</p>
+                <h4>Dress code:TG005</h4>
+                <h4>Price:1800 rs /-</h4>
+                <!--<h4>Traditional-gowns 2</h4>
+                <p>Traditional-gowns</p>-->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/1_portfolio-7.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="western 1"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
                 </div>
               </div>
             </div>
@@ -448,40 +458,46 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1_portfolio-8.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Duo 1</h4>
-                <p>Duo</p>
+                <h4>Dress code:D001</h4>
+                <h4>Price:3800 rs /-</h4>
+                <!--<h4>Traditional-gowns 2</h4>
+                <p>Traditional-gowns</p>-->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/1_portfolio-8.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="western 3"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
                 </div>
               </div>
             </div>
           </div>
 
           
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Fusion-dresses">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Casual-wear">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1_portfolio-10.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Fusion dresses 1</h4>
-                <p>Fusion dresses</p>
+                <h4>Dress code:CW001</h4>
+                <h4>Price:2000 rs /-</h4>
+                <!--<h4>Traditional-gowns 2</h4>
+                <p>Traditional-gowns</p>-->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/1_portfolio-9.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="western 3"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-western">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Fusion-dresses">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1_portfolio-9.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>western 3</h4>
-                <p>western</p>
+                <h4>Dress code:FD001</h4>
+                <h4>Price:1800 rs /-</h4>
+                <!--<h4>Traditional-gowns 2</h4>
+                <p>Traditional-gowns</p>-->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/1_portfolio-9.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Duo 3"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
                 </div>
               </div>
             </div>
