--- a/index.html
+++ b/index.html
@@ -347,7 +347,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1_portfolio-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h1>Dress code:TG001 Price:1500 rs /-</h1>
+                <h2>Dress code:TG001</h2>
+                <h2>Price:1500 rs /-</h2>
                 <!--<h4>Traditional-gowns 1</h4>
                 <p>Traditional-gowns</p> -->
                 <div class="portfolio-links">
