--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </ul>
           </li>-->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="getstarted scrollto" href="#portfolio">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -91,7 +91,7 @@
           <h2 data-aos="fade-up" data-aos-delay="400">We are team of young and aspiring designers making indigenous clothing for women</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
-              <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+              <a href="#portfolio" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                 <span>Get Started</span>
                 <i class="bi bi-arrow-right"></i>
               </a>
@@ -589,7 +589,7 @@
                 <div class="info-box">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Address</h3>
-                  <p>Vijayawada,<br>India, AP 5221137</p>
+                  <p>Vijayawada,<br>India, AP 521137</p>
                 </div>
               </div>
               <div class="col-md-6">
